# free-transformer

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Dockerfile  Dockerfile.cpu  Makefile  README.md  RELEASE.md  docker-compose.yml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: docs.yml  publish.yml
api/config/: index.html
api/data/: index.html
api/losses/: index.html
api/model/: index.html
api/training/: index.html
architecture/baseline/: index.html
architecture/free-transformer/: index.html
architecture/latent-planning/: index.html
architecture/overview/: index.html
configs/: baseline.yaml  free_transformer.yaml
development/contributing/: index.html
development/quality/: index.html
development/testing/: index.html
docker/: README.md  demo.sh
docs/: faq.md  index.md
docs/api/: config.md  data.md  losses.md  model.md  training.md
docs/architecture/: baseline.md  free-transformer.md  latent-planning.md  overview.md
docs/development/: contributing.md  quality.md  testing.md
docs/examples/: basic.md  custom-training.md  evaluation.md
docs/getting-started/: docker.md  installation.md  quick-start.md
docs/training/: configuration.md  guide.md  multi-gpu.md  synthetic-data.md
examples/: eval_compare.py  generate_data.py  inspect_checkpoint.py  train_baseline.py  train_free.py
examples/basic/: index.html
examples/custom-training/: index.html
examples/evaluation/: index.html
faq/: index.html
getting-started/docker/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
scripts/: bump_version.py  serve_docs.py  setup.sh  validate_package.py  validation_test.py
search/: search_index.json
src/free_transformer/: __init__.py  baseline.py  config.py  encoder.py  injection.py  latent.py  losses.py  model.py  synthetic_data.py  train_utils.py
tests/: __init__.py  quick_test_comparison.py
tests/integration/: test_training_pipeline.py
tests/unit/: test_encoder.py  test_latent.py  test_losses.py
training/configuration/: index.html
training/guide/: index.html
training/multi-gpu/: index.html
training/synthetic-data/: index.html
